--- a/app.json
+++ b/app.json
@@ -1,11 +1,9 @@
 {
   "expo": {
-    "name": "PomodoroApp",
+    "name": "Pomodoro Timer",
     "slug": "PomodoroApp",
     "platforms": [
-      "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -21,8 +19,9 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
+    "android": {
+      "package": "com.rafaelnocelli.pomodoroapp",
+      "versionCode": 1
     }
   }
 }
